--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  docker:
+    compose:
+      enabled: false
+  session:
+    store-type: none
   application:
     name: JO2024
   datasource:
